# skill-vaccine

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  action.yml  package.json  pyproject.toml
.github/workflows/: release.yml  skill-vaccine.yml  skillshield.yml
docs/: benchmark.md  capabilities.md  config.md  cross-file-consistency.md  github-action.md  host-profiles.md  jury-layer3.md  metadata-audit.md  pre-commit.md  registry-lifecycle-risks.md  release.md  risk-graph.md  rules.md  semantic-layer2.md  suppressions.md  telemetry.md  trust-tiers.md  verdicts.md
docs/mdpr-readme/: accessibility-review.json  narrative-review.json
docs/mdpr-teaser/: accessibility-review.json  citation-review.json  evidence-ledger.json  narrative-review.json  teaser-spec.json  teaser.md
research/: google_agentic_rag_compliance_audit.md  google_agentic_rag_trace.json  skill-vaccine-research-synthesis.md  skillshield_research_synthesis.md
research/paper_summaries/: coevoskills_2604.01687.md  index.md  openskill_eval_2605.23657.md  skill_landscape_2602.08004.md  skill_survey_2602.12430.md  skilldex_2604.16911.md  skillguard_2606.03024.md  skillmd_semantic_attack_2605.11418.md  skillprobe_2603.21019.md  skillsbench_2602.12670.md  skillsieve_2604.06550.md
skills/skill-vaccine-review/: SKILL.md
skills/skill-vaccine-review/agents/: openai.yaml
skills/skillshield-review/: SKILL.md
skills/skillshield-review/agents/: openai.yaml
src/skill_vaccine/: config.py  host_policy.py  jury.py  manifest.py  models.py  reporters.py  risk_graph.py  rule_catalog.py  rules.py  semantic.py  semantic_review.py  suppressions.py  telemetry.py
src/skill_vaccine/data/: __init__.py  rules.toml
src/skillshield/: __init__.py  cli.py  evaluation.py  host_policy.py  installer.py  jury.py  llm_review.py  metadata_audit.py  parser.py  reporters.py  rule_catalog.py  rules.py  scanner.py  semantic.py  taxonomy.py  telemetry.py  trust.py
src/skillshield/data/: __init__.py  rules.toml
tests/: test_scanner.py
tests/fixtures/benchmark/: labels.json
tests/fixtures/benign_script_skill/: SKILL.md
tests/fixtures/benign_skill/: SKILL.md
tests/fixtures/configs/: scan_config.json  scan_config.toml
tests/fixtures/declared_script_skill/: SKILL.md
tests/fixtures/deep_script_skill/: SKILL.md
tests/fixtures/discovery_manipulation_skill/: SKILL.md
(+43 files in other folders)
