[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-vaccine"
version = "0.1.0"
description = "Scan-gated safety for Agent Skills before they reach Codex, Claude Code, CI, or a registry."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Skill Vaccine contributors"}]
keywords = [
    "agent-skills",
    "skill-security",
    "skill-scanner",
    "ai-agent-security",
    "prompt-injection",
    "supply-chain-security",
    "static-analysis",
    "sarif",
    "codex",
    "claude-code",
]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/ch040602/skill-vaccine"
Documentation = "https://github.com/ch040602/skill-vaccine#readme"

[project.scripts]
skill-vaccine = "skill_vaccine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_vaccine = ["data/*.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]

